@@ -2,4 +2,5 @@
 
 headersdir = $(ERLANG_INSTALL_LIB_DIR_exmpp)/include
 
-dist_headers_DATA = exmpp.hrl
+dist_headers_DATA = exmpp.hrl						\
+		    xmpp.hrl
